# serializer version: 1
# name: test_entities[binary_sensor.qube_heat_pump_anti_legionella-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_anti_legionella',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Anti-legionella',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Anti-legionella',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'anti_legionella',
    'unique_id': '01JQUBEHEATPUMP00000000000-anti_legionella',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_anti_legionella-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump Anti-legionella',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_anti_legionella',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_anti_legionella_timeout_alarm-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.qube_heat_pump_anti_legionella_timeout_alarm',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Anti-legionella timeout alarm',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Anti-legionella timeout alarm',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_antilegionella_timeout',
    'unique_id': '01JQUBEHEATPUMP00000000000-alarm_antilegionella_timeout',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_anti_legionella_timeout_alarm-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Qube heat pump Anti-legionella timeout alarm',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_anti_legionella_timeout_alarm',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_booster_security-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_booster_security',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Booster security',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Booster security',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'booster_security',
    'unique_id': '01JQUBEHEATPUMP00000000000-booster_security',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_booster_security-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump Booster security',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_booster_security',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_buffer_pump-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_buffer_pump',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Buffer pump',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Buffer pump',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'buffer_pump',
    'unique_id': '01JQUBEHEATPUMP00000000000-buffer_pump',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_buffer_pump-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump Buffer pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_buffer_pump',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_buffer_sensor_enabled-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.qube_heat_pump_buffer_sensor_enabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Buffer sensor enabled',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Buffer sensor enabled',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'buffer_sensor_enabled',
    'unique_id': '01JQUBEHEATPUMP00000000000-buffer_sensor_enabled',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_buffer_sensor_enabled-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump Buffer sensor enabled',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_buffer_sensor_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_central_heating_alarm-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.qube_heat_pump_central_heating_alarm',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Central heating alarm',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Central heating alarm',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_central_heating',
    'unique_id': '01JQUBEHEATPUMP00000000000-alarm_central_heating',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_central_heating_alarm-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Qube heat pump Central heating alarm',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_central_heating_alarm',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_compressor_alarm-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.qube_heat_pump_compressor_alarm',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Compressor alarm',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Compressor alarm',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_compressor',
    'unique_id': '01JQUBEHEATPUMP00000000000-alarm_compressor',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_compressor_alarm-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Qube heat pump Compressor alarm',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_compressor_alarm',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_cooling_alarm-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.qube_heat_pump_cooling_alarm',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Cooling alarm',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Cooling alarm',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_cooling',
    'unique_id': '01JQUBEHEATPUMP00000000000-alarm_cooling',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_cooling_alarm-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Qube heat pump Cooling alarm',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_cooling_alarm',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_cooling_output-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_cooling_output',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Cooling output',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Cooling output',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cooling_output',
    'unique_id': '01JQUBEHEATPUMP00000000000-cooling_output',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_cooling_output-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump Cooling output',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_cooling_output',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_day_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_day_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Day mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Day mode',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'day_mode',
    'unique_id': '01JQUBEHEATPUMP00000000000-day_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_day_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump Day mode',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_day_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_dewpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_dewpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Dewpoint',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Dewpoint',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'dewpoint',
    'unique_id': '01JQUBEHEATPUMP00000000000-dewpoint',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_dewpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump Dewpoint',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_dewpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_dewpoint_alarm-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.qube_heat_pump_dewpoint_alarm',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Dewpoint alarm',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Dewpoint alarm',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_dewpoint',
    'unique_id': '01JQUBEHEATPUMP00000000000-alarm_dewpoint',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_dewpoint_alarm-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Qube heat pump Dewpoint alarm',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_dewpoint_alarm',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_dhw_controller_enabled-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.qube_heat_pump_dhw_controller_enabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'DHW controller enabled',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'DHW controller enabled',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'dhw_controller_enabled',
    'unique_id': '01JQUBEHEATPUMP00000000000-dhw_controller_enabled',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_dhw_controller_enabled-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump DHW controller enabled',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_dhw_controller_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_dhw_timeout_alarm-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.qube_heat_pump_dhw_timeout_alarm',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'DHW timeout alarm',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'DHW timeout alarm',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_dhw_timeout',
    'unique_id': '01JQUBEHEATPUMP00000000000-alarm_dhw_timeout',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_dhw_timeout_alarm-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Qube heat pump DHW timeout alarm',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_dhw_timeout_alarm',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_external_demand-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_external_demand',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'External demand',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'External demand',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'external_demand',
    'unique_id': '01JQUBEHEATPUMP00000000000-external_demand',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_external_demand-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump External demand',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_external_demand',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_flow_alarm-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.qube_heat_pump_flow_alarm',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Flow alarm',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Flow alarm',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_flow',
    'unique_id': '01JQUBEHEATPUMP00000000000-alarm_flow',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_flow_alarm-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Qube heat pump Flow alarm',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_flow_alarm',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_four_way_valve-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_four_way_valve',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Four-way valve',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Four-way valve',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'four_way_valve',
    'unique_id': '01JQUBEHEATPUMP00000000000-four_way_valve',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_four_way_valve-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump Four-way valve',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_four_way_valve',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_global_alarm-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.qube_heat_pump_global_alarm',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Global alarm',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Global alarm',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_global',
    'unique_id': '01JQUBEHEATPUMP00000000000-alarm_global',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_global_alarm-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Qube heat pump Global alarm',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_global_alarm',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_heater_step_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_heater_step_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Heater step 1',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Heater step 1',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'heater_step_1',
    'unique_id': '01JQUBEHEATPUMP00000000000-heater_step_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_heater_step_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump Heater step 1',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_heater_step_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_heater_step_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_heater_step_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Heater step 2',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Heater step 2',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'heater_step_2',
    'unique_id': '01JQUBEHEATPUMP00000000000-heater_step_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_heater_step_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump Heater step 2',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_heater_step_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_heater_step_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_heater_step_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Heater step 3',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Heater step 3',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'heater_step_3',
    'unique_id': '01JQUBEHEATPUMP00000000000-heater_step_3',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_heater_step_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump Heater step 3',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_heater_step_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_heating_alarm-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.qube_heat_pump_heating_alarm',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Heating alarm',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Heating alarm',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_heating',
    'unique_id': '01JQUBEHEATPUMP00000000000-alarm_heating',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_heating_alarm-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Qube heat pump Heating alarm',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_heating_alarm',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_keypad-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_keypad',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Keypad',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Keypad',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'keypad',
    'unique_id': '01JQUBEHEATPUMP00000000000-keypad',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_keypad-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump Keypad',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_keypad',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_plant_demand-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_plant_demand',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Plant demand',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Plant demand',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'plant_demand',
    'unique_id': '01JQUBEHEATPUMP00000000000-plant_demand',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_plant_demand-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump Plant demand',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_plant_demand',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_plant_sensor_enabled-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.qube_heat_pump_plant_sensor_enabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Plant sensor enabled',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Plant sensor enabled',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'plant_sensor_enabled',
    'unique_id': '01JQUBEHEATPUMP00000000000-plant_sensor_enabled',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_plant_sensor_enabled-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump Plant sensor enabled',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_plant_sensor_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_pv_surplus-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_pv_surplus',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'PV surplus',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'PV surplus',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'pv_surplus',
    'unique_id': '01JQUBEHEATPUMP00000000000-pv_surplus',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_pv_surplus-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump PV surplus',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_pv_surplus',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_room_sensor_enabled-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.qube_heat_pump_room_sensor_enabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Room sensor enabled',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Room sensor enabled',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'room_sensor_enabled',
    'unique_id': '01JQUBEHEATPUMP00000000000-room_sensor_enabled',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_room_sensor_enabled-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump Room sensor enabled',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_room_sensor_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_source_alarm-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.qube_heat_pump_source_alarm',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Source alarm',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Source alarm',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_source',
    'unique_id': '01JQUBEHEATPUMP00000000000-alarm_source',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_source_alarm-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Qube heat pump Source alarm',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_source_alarm',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_source_flow-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_source_flow',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Source flow',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Source flow',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'source_flow',
    'unique_id': '01JQUBEHEATPUMP00000000000-source_flow',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_source_flow-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump Source flow',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_source_flow',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_source_pump-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_source_pump',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Source pump',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Source pump',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'source_pump',
    'unique_id': '01JQUBEHEATPUMP00000000000-source_pump',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_source_pump-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump Source pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_source_pump',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_summer_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_summer_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Summer mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Summer mode',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'summer_mode',
    'unique_id': '01JQUBEHEATPUMP00000000000-summer_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_summer_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump Summer mode',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_summer_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_supply_too_hot_alarm-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.qube_heat_pump_supply_too_hot_alarm',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Supply too hot alarm',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Supply too hot alarm',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_supply_too_hot',
    'unique_id': '01JQUBEHEATPUMP00000000000-alarm_supply_too_hot',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_supply_too_hot_alarm-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Qube heat pump Supply too hot alarm',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_supply_too_hot_alarm',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_thermostat_demand-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_thermostat_demand',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Thermostat demand',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Thermostat demand',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'thermostat_demand',
    'unique_id': '01JQUBEHEATPUMP00000000000-thermostat_demand',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_thermostat_demand-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump Thermostat demand',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_thermostat_demand',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_three_way_valve-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_three_way_valve',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Three-way valve',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Three-way valve',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'three_way_valve',
    'unique_id': '01JQUBEHEATPUMP00000000000-three_way_valve',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_three_way_valve-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump Three-way valve',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_three_way_valve',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_user_pump-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_user_pump',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'User pump',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'User pump',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'user_pump',
    'unique_id': '01JQUBEHEATPUMP00000000000-user_pump',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_user_pump-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump User pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_user_pump',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_working_hours_alarm-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.qube_heat_pump_working_hours_alarm',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Working hours alarm',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Working hours alarm',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_working_hours',
    'unique_id': '01JQUBEHEATPUMP00000000000-alarm_working_hours',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_working_hours_alarm-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Qube heat pump Working hours alarm',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_working_hours_alarm',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
